test_suite/tests/compile_fail/nullable_non_option.rs
use ronky::Exported;

#[derive(Exported)]
struct Test {
    #[arri(nullable)]
    example: u8,
}

fn main() {}
